--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -116,15 +116,6 @@ body{
 }
 .main{
   padding: 0 30px;
-  &__item{
-    &--filmography{
-      padding: 0 0 30px 0;
-      &__title{
-        margin: 0 0 15px 0;
-      }
-    }
-  }
-
 }
 .about{
   margin: 0 0 100px;
@@ -203,128 +194,127 @@ body{
     }
   }
 }
-.accordion{
-  &--item{
-    &--header{
-      &__button{
-        font-size: 30px;
-        font-weight: 600;
-        border: 1px solid $colorMain;
-        border-radius: 20px;
-        width: 100%;
-        padding: 15px 0;
-        background-color: #fff;
-        transition: all ease 0.5s;
-        margin: 0 0 5px 0;
-        &[aria-expanded=true]{
-          background-color: $colorMain;
-          color: #fff;
-        }
-        @media (max-width: 767px){
-          font-size: 20px;
-        }
+.filmography{
+  padding: 0 0 30px 0;
+  &__title{
+    margin: 0 0 15px 0;
+  }
+}
+.header-accordion{
+  &__button{
+    font-size: 30px;
+    font-weight: 600;
+    border: 1px solid $colorMain;
+    border-radius: 20px;
+    width: 100%;
+    padding: 15px 0;
+    background-color: #fff;
+    transition: all ease 0.5s;
+    margin: 0 0 5px 0;
+    &[aria-expanded=true]{
+      background-color: $colorMain;
+      color: #fff;
+    }
+    @media (max-width: 767px){
+      font-size: 20px;
+    }
+  }
+}
+.film{
+  margin: 0 0 10px 0;
+  border-bottom: 1px solid $colorMain;
+  padding: 10px 0;
+  &:last-child{
+    border-bottom: none;
+  }
+  &__flex{
+    display: flex;
+    @media (max-width: 450px){
+      flex-direction: column;
+    }
+  }
+  &__description{
+    //line-height: 20px;
+  }
+  &__img{
+    flex: 0 1 30%;
+    align-self: center;
+    @media (max-width: 767px){
+      margin: 0 0 10px 0;
+      img{
+        width: 200px;
       }
     }
-    &--collapse{
-      &--film{
-        margin: 0 0 10px 0;
-        border-bottom: 1px solid $colorMain;
-        padding: 10px 0;
-        &__description{
-          line-height: 20px;
-        }
-        &:last-child{
-          border-bottom: none;
-        }
-        &--flex{
-          display: flex;
-          @media (max-width: 450px){
-            flex-direction: column;
-          }
-          &__img{
-            flex: 0 1 30%;
-            align-self: center;
-            @media (max-width: 767px){
-              margin: 0 0 10px 0;
-              img{
-                width: 200px;
-              }
-            }
-            @media (max-width: 450px){
-              flex:0 1 100%;
-            }
-          }
-          &--main{
-            flex: 0 1 70%;
-            padding: 10px 15px;
-            display: flex;
-            flex-direction: column;
-            @media (max-width: 450px){
-              flex: 0 1 100%;
-            }
-            &__name{
-              text-align: center;
-              font-weight: 600;
-              margin: 0 0 10px 0;
-              font-size: 30px;
-              @media (max-width: 767px){
-                font-size: 24px;
-                margin: 0 0 30px 0;
-              }
-              @media (max-width: 450px){
-                margin: 0 0 15px 0;
-              }
-
-            }
-            &__director{
-              font-weight: 500;
-              margin: 0 0 15px 0;
-              font-size: 18px;
-              line-height: 20px;
-              span{
-                font-size: 16px;
-              }
-              @media (max-width: 767px){
-                font-size: 16px;
-                margin: 0 0 80px 0;
-                span{
-                  font-size: 15px;
-                  display: block;
-                  margin: 0 0 5px 0;
-                }
-              }
-              @media (max-width: 450px){
-                margin: 0 0 20px 0;
-              }
-            }
-            &__link{
-              color: $colorMain;
-              font-size: 16px;
-              margin: 0 0 10px 0;
-              transition: all 0.3s ease;
-              span{
-                font-weight: 500;
-                font-size: 18px;
-              }
-              &:hover,
-              &:active{
-                text-decoration: underline;
-                color: darkred;
-              }
-              @media (max-width: 767px){
-                font-size: 14px;
-                margin: 0 0 10px 0;
-                span{
-                  font-size: 16px;
-                }
-              }
-            }
-            }
-          }
-        }
+    @media (max-width: 450px){
+      flex:0 1 100%;
+    }
+  }
+  &__main{
+    flex: 0 1 70%;
+    padding: 10px 15px;
+    display: flex;
+    flex-direction: column;
+    @media (max-width: 450px){
+      flex: 0 1 100%;
+    }
+  }
+  &__name{
+    text-align: center;
+    font-weight: 600;
+    margin: 0 0 10px 0;
+    font-size: 30px;
+    @media (max-width: 767px){
+      font-size: 24px;
+      margin: 0 0 30px 0;
+    }
+    @media (max-width: 450px){
+      margin: 0 0 15px 0;
+    }
+  }
+  &__director{
+    font-weight: 500;
+    margin: 0 0 15px 0;
+    font-size: 18px;
+    line-height: 20px;
+    span{
+      font-size: 16px;
+    }
+    @media (max-width: 767px){
+      font-size: 16px;
+      margin: 0 0 80px 0;
+      span{
+        font-size: 15px;
+        display: block;
+        margin: 0 0 5px 0;
+      }
+    }
+    @media (max-width: 450px){
+      margin: 0 0 20px 0;
+    }
+  }
+  &__link{
+    color: $colorMain;
+    font-size: 16px;
+    margin: 0 0 10px 0;
+    transition: all 0.3s ease;
+    span{
+      font-weight: 500;
+      font-size: 18px;
+    }
+    &:hover,
+    &:active{
+      text-decoration: underline;
+      color: darkred;
+    }
+    @media (max-width: 767px){
+      font-size: 14px;
+      margin: 0 0 10px 0;
+      span{
+        font-size: 16px;
       }
     }
   }
+}
 
 
 
